feat: add-categories-and-fix-variable-name

--- a/History/NLP-char-classification.ipynb
+++ b/History/NLP-char-classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -234,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] [2022-12-25 22:56:21,175:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract word embeddings for each tweet\n",
     "def extractWordEmbeddings(data):\n",
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -268,17 +276,31 @@
      "output_type": "stream",
      "text": [
       "Before balancing:\n",
-      "Class=2, n=5207 (79.411%)\n",
-      "Class=1, n=954 (14.549%)\n",
-      "Class=0, n=396 (6.039%)\n",
+      "Class=1, n=897 (13.680%)\n",
+      "Class=2, n=3422 (52.189%)\n",
+      "Class=4, n=972 (14.824%)\n",
+      "Class=9, n=293 (4.469%)\n",
+      "Class=5, n=577 (8.800%)\n",
+      "Class=6, n=88 (1.342%)\n",
+      "Class=3, n=150 (2.288%)\n",
+      "Class=8, n=75 (1.144%)\n",
+      "Class=0, n=67 (1.022%)\n",
+      "Class=7, n=16 (0.244%)\n",
       "After balancing:\n",
-      "Class=2, n=5207 (33.333%)\n",
-      "Class=1, n=5207 (33.333%)\n",
-      "Class=0, n=5207 (33.333%)\n",
+      "Class=1, n=3422 (10.000%)\n",
+      "Class=2, n=3422 (10.000%)\n",
+      "Class=4, n=3422 (10.000%)\n",
+      "Class=9, n=3422 (10.000%)\n",
+      "Class=5, n=3422 (10.000%)\n",
+      "Class=6, n=3422 (10.000%)\n",
+      "Class=3, n=3422 (10.000%)\n",
+      "Class=8, n=3422 (10.000%)\n",
+      "Class=0, n=3422 (10.000%)\n",
+      "Class=7, n=3422 (10.000%)\n",
       "Some notes about dimensions of the data\n",
       "X_train size before cleaning = (6557, 100)\n",
-      "X_train size = (15621, 100)\n",
-      "y_train size = (15621,)\n"
+      "X_train size = (34220, 100)\n",
+      "y_train size = (34220,)\n"
      ]
     }
    ],
@@ -311,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,15 +374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (1562, 100)\n",
-      "X_test shape: (14059, 100)\n"
+      "X_train shape: (17110, 100)\n",
+      "X_test shape: (17110, 100)\n"
      ]
     }
    ],
@@ -369,7 +391,7 @@
     "# y = getStances()\n",
     "\n",
     "# Split the dataset into train and test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.9, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=42)\n",
     "print(f\"X_train shape: {X_train.shape}\")\n",
     "print(f\"X_test shape: {X_test.shape}\")"
    ]
@@ -385,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -426,23 +448,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.74      0.83      0.78      4685\n",
-      "           0       0.66      0.64      0.65      4698\n",
-      "           1       0.68      0.61      0.64      4676\n",
+      "          -1       0.98      0.99      0.99      1729\n",
+      "           0       0.86      0.86      0.86      1690\n",
+      "           1       0.80      0.43      0.56      1754\n",
+      "           2       0.96      0.98      0.97      1712\n",
+      "           3       0.74      0.87      0.80      1637\n",
+      "           4       0.80      0.91      0.85      1720\n",
+      "           5       0.96      1.00      0.98      1680\n",
+      "           6       0.99      1.00      0.99      1722\n",
+      "           7       0.96      0.99      0.98      1734\n",
+      "           8       0.90      0.96      0.93      1732\n",
       "\n",
-      "    accuracy                           0.70     14059\n",
-      "   macro avg       0.69      0.70      0.69     14059\n",
-      "weighted avg       0.69      0.70      0.69     14059\n",
+      "    accuracy                           0.90     17110\n",
+      "   macro avg       0.90      0.90      0.89     17110\n",
+      "weighted avg       0.90      0.90      0.89     17110\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.6959243189416032"
+       "0.8981297486849795"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,48 +486,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.74      0.83      0.78      4685\n",
-      "           1       0.66      0.67      0.66      4698\n",
-      "           2       0.69      0.60      0.64      4676\n",
-      "\n",
-      "    accuracy                           0.70     14059\n",
-      "   macro avg       0.70      0.70      0.69     14059\n",
-      "weighted avg       0.70      0.70      0.69     14059\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.6973468952272566"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Xgboost\n",
-    "xgb = XGBClassifier()\n",
-    "_y_train = y_train + 1\n",
-    "_y_test = y_test + 1\n",
-    "model, report = modelPipeline(X_train, _y_train, X_test, _y_test, xgb, '../out/xgb.model')\n",
-    "report"
+    "# # Xgboost\n",
+    "# xgb = XGBClassifier()\n",
+    "# _y_train = y_train + 1\n",
+    "# _y_test = y_test + 1\n",
+    "# model, report = modelPipeline(X_train, _y_train, X_test, _y_test, xgb, '../out/xgb.model')\n",
+    "# report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -507,23 +509,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.35      0.91      0.51       264\n",
-      "           1       0.00      0.00      0.00       246\n",
-      "           2       0.51      0.19      0.28       272\n",
+      "          -1       0.37      0.91      0.53      2641\n",
+      "           0       0.61      0.02      0.03      2571\n",
+      "           1       0.57      0.27      0.37      2599\n",
       "\n",
-      "    accuracy                           0.37       782\n",
-      "   macro avg       0.29      0.37      0.26       782\n",
-      "weighted avg       0.30      0.37      0.27       782\n",
+      "    accuracy                           0.41      7811\n",
+      "   macro avg       0.52      0.40      0.31      7811\n",
+      "weighted avg       0.51      0.41      0.31      7811\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.37468030690537085"
+       "0.4051977979772116"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,42 +540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.52      0.62      0.57       264\n",
-      "           1       0.51      0.52      0.51       246\n",
-      "           2       0.66      0.53      0.58       272\n",
-      "\n",
-      "    accuracy                           0.55       782\n",
-      "   macro avg       0.56      0.55      0.55       782\n",
-      "weighted avg       0.56      0.55      0.56       782\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.5549872122762148"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# SVM\n",
-    "from sklearn import svm\n",
-    "svm = svm.SVC()\n",
-    "model, report = modelPipeline(X_train, y_train, X_test, y_test, svm, 'out/svm.model')\n",
-    "report"
+    "# # SVM\n",
+    "# from sklearn import svm\n",
+    "# svm = svm.SVC()\n",
+    "# model, report = modelPipeline(X_train, y_train, X_test, y_test, svm, 'out/svm.model')\n",
+    "# report"
    ]
   },
   {
@@ -587,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-24 19:55:13,915:Client-AutoML(1):1db8f54a-83b4-11ed-a009-09f3292e7554] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
+      "[WARNING] [2022-12-25 22:51:19,049:Client-AutoML(1):e12e6bfe-8495-11ed-9e22-8deeefa998df] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
      ]
     }
    ],
@@ -626,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -634,9 +609,9 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 1db8f54a-83b4-11ed-a009-09f3292e7554\n",
+      "  Dataset name: e12e6bfe-8495-11ed-9e22-8deeefa998df\n",
       "  Metric: accuracy\n",
-      "  Best validation score: 0.918113\n",
+      "  Best validation score: 0.851047\n",
       "  Number of target algorithm runs: 1\n",
       "  Number of successful target algorithm runs: 1\n",
       "  Number of crashed target algorithm runs: 0\n",
@@ -645,7 +620,7 @@
       "\n",
       "          rank  ensemble_weight           type      cost   duration\n",
       "model_id                                                           \n",
-      "2            1              1.0  random_forest  0.081887  52.255295\n"
+      "2            1              1.0  random_forest  0.148953  28.906683\n"
      ]
     }
    ],
@@ -656,14 +631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.9168797953964194\n"
+      "Accuracy score 0.8486749455895531\n"
      ]
     }
    ],
@@ -685,7 +660,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -699,12 +674,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "e0d277ff71215bc2e00e65dbe1083bb095effc9738a74808cbcc90b6ef0d8026"
    }
   }
  },
