--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,15 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 22:01:37,440:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
-      "[WARNING] [2022-12-25 22:01:38,611:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
+      "[WARNING] [2022-12-25 23:26:12,642:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
+      "[WARNING] [2022-12-25 23:26:16,516:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -271,35 +271,36 @@
     "df = pd.DataFrame(trainingFeatures)\n",
     "df['stance'] = stances\n",
     "\n",
-    "X_train, y_train = balance_data(df)\n",
+    "X_train_balanced, y_train_balanced = balance_data(df)\n",
     "print(\"Some notes about dimensions of the data\")\n",
     "print(f\"X_train size before cleaning = {trainingFeatures.shape}\")\n",
-    "print(f\"X_train size = {X_train.shape}\")\n",
-    "print(f\"y_train size = {y_train.shape}\")"
+    "print(f\"X_train size = {X_train_balanced.shape}\")\n",
+    "print(f\"y_train size = {y_train_balanced.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_test size = (1398, 100)\n",
-      "y_test size = (1398,)\n",
+      "X_test size = (1000, 100)\n",
+      "y_test size = (1000,)\n",
       "Unique values in the dataset = [-1  0  1]\n",
       "Unique values in the dataset = [-1  0  1]\n"
      ]
     }
    ],
    "source": [
-    "split = 'y'\n",
+    "split = 'n'\n",
     "if split == 'y':\n",
     "    # Split the data into train and test\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(trainingFeatures, stances, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X_train_balanced, y_train_balanced, test_size=0.5, random_state=42)\n",
     "else:\n",
+    "    X_train, y_train = X_train_balanced, y_train_balanced\n",
     "    X_test = np.array([np.array(xi) for xi in dev_data['features'].to_numpy()])\n",
     "    # X_test = np.load('out/test_embeddings.npy')\n",
     "    y_test = dev_data['stance'].to_numpy()\n",
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -331,23 +332,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.50      0.04      0.08        93\n",
-      "           0       0.42      0.08      0.13       208\n",
-      "           1       0.80      0.98      0.88      1097\n",
+      "          -1       0.00      0.00      0.00        70\n",
+      "           0       0.00      0.00      0.00       126\n",
+      "           1       0.80      1.00      0.89       804\n",
       "\n",
-      "    accuracy                           0.78      1398\n",
-      "   macro avg       0.57      0.37      0.36      1398\n",
-      "weighted avg       0.72      0.78      0.71      1398\n",
+      "    accuracy                           0.80      1000\n",
+      "   macro avg       0.27      0.33      0.30      1000\n",
+      "weighted avg       0.65      0.80      0.72      1000\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7839771101573677"
+       "0.804"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,42 +356,25 @@
    "source": [
     "# RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=0)\n",
-    "_y_train = y_train + 1\n",
-    "_y_test = y_test + 1\n",
     "model, report = modelPipeline(X_train, y_train, X_test, y_test, clf, 'out/models/clf.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.33      0.08      0.12        93\n",
-      "           1       0.33      0.08      0.12       208\n",
-      "           2       0.80      0.97      0.87      1097\n",
-      "\n",
-      "    accuracy                           0.78      1398\n",
-      "   macro avg       0.49      0.37      0.37      1398\n",
-      "weighted avg       0.70      0.78      0.71      1398\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'XGBClassifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_76436/2274880856.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Xgboost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mxgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0m_y_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0m_y_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodelPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'out/models/xgb.model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'XGBClassifier' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7753934191702432"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -404,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,14 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 22:02:19,413:Client-AutoML(1):093be1d2-848f-11ed-983d-1da6501c908a] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
+      "[WARNING] [2022-12-25 23:12:51,594:Client-AutoML(1):e20942bc-8498-11ed-aa94-212ab1540bf0] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
      ]
     }
    ],
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -537,9 +521,9 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 093be1d2-848f-11ed-983d-1da6501c908a\n",
+      "  Dataset name: e20942bc-8498-11ed-aa94-212ab1540bf0\n",
       "  Metric: accuracy\n",
-      "  Best validation score: 0.795664\n",
+      "  Best validation score: 0.915922\n",
       "  Number of target algorithm runs: 1\n",
       "  Number of successful target algorithm runs: 1\n",
       "  Number of crashed target algorithm runs: 0\n",
@@ -548,7 +532,7 @@
       "\n",
       "          rank  ensemble_weight           type      cost   duration\n",
       "model_id                                                           \n",
-      "2            1              1.0  random_forest  0.204336  20.671741\n"
+      "2            1              1.0  random_forest  0.084078  70.365395\n"
      ]
     }
    ],
@@ -559,14 +543,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.7761087267525035\n"
+      "F1 score 0.29711751662971175\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"F1 score\", sklearn.metrics.f1_score(y_test, y_pred, average='macro')) #  get the Score of the final ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score 0.804\n"
      ]
     }
    ],
@@ -577,7 +578,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -591,12 +592,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "e0d277ff71215bc2e00e65dbe1083bb095effc9738a74808cbcc90b6ef0d8026"
    }
   }
  },
