--- a/categories.ipynb
+++ b/categories.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -18,16 +18,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /home/makrion/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -98,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,18 +162,18 @@
    ],
    "source": [
     "# Some preprocessing steps, like extracting limmitization\n",
-    "training_data = training_data.pipe(processing)    \n",
+    "training_data = training_data.pipe(processing_categories)    \n",
     "print(f\"Processed Training dataset size = {training_data.shape}\")\n",
     "print(training_data.columns)\n",
     "# Some preprocessing steps, like extracting limmitization\n",
-    "dev_data = processing(dev_data)   \n",
+    "dev_data = processing_categories(dev_data)   \n",
     "print(f\"Processed dev dataset size = {dev_data.shape}\")\n",
     "print(dev_data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -282,28 +276,26 @@
     "df = pd.DataFrame(trainingFeatures)\n",
     "df['category'] = categories\n",
     "\n",
-    "X_train, y_train = balance_data(df)\n",
+    "X_train_balanced, y_train_balanced = balance_data(df)\n",
     "print(\"Some notes about dimensions of the data\")\n",
     "print(f\"X_train size before cleaning = {trainingFeatures.shape}\")\n",
-    "print(f\"X_train size = {X_train.shape}\")\n",
-    "print(f\"y_train size = {y_train.shape}\")"
+    "print(f\"X_train size = {X_train_balanced.shape}\")\n",
+    "print(f\"y_train size = {y_train_balanced.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_test size = (1398, 100)\n",
-      "y_test size = (1398,)\n",
-      "Unique values in the dataset = ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
-      " 'restrictions' 'rumors' 'unrelated']\n",
-      "Unique values in the dataset = ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
-      " 'restrictions' 'rumors' 'unrelated']\n"
+      "X_test size = (7232, 100)\n",
+      "y_test size = (7232,)\n",
+      "Unique values in the dataset = [-1  0  1  2  3  4  5  6  7  8]\n",
+      "Unique values in the dataset = [-1  0  1  2  3  4  5  6  7  8]\n"
      ]
     }
    ],
@@ -311,11 +303,12 @@
     "split = 'y'\n",
     "if split == 'y':\n",
     "    # Split the data into train and test\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(trainingFeatures, categories, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X_train_balanced, y_train_balanced, test_size=0.2, random_state=42)\n",
     "else:\n",
+    "    X_train, y_train = X_train_balanced, y_train_balanced\n",
     "    X_test = np.array([np.array(xi) for xi in dev_data['features'].to_numpy()])\n",
     "    # X_test = np.load('out/test_embeddings.npy')\n",
-    "    y_test = dev_data['category'].to_numpy()\n",
+    "    y_test = dev_data['stance'].to_numpy()\n",
     "\n",
     "print(f\"X_test size = {X_test.shape}\")\n",
     "print(f\"y_test size = {y_test.shape}\")\n",
@@ -335,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,30 +337,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      advice       0.00      0.00      0.00        12\n",
-      "   celebrity       0.76      0.44      0.56       194\n",
-      "   info_news       0.58      0.93      0.71       718\n",
-      "      others       0.00      0.00      0.00        43\n",
-      "    personal       0.41      0.21      0.27       208\n",
-      "        plan       0.33      0.02      0.03       113\n",
-      "    requests       0.33      0.05      0.08        21\n",
-      "restrictions       0.00      0.00      0.00         2\n",
-      "      rumors       0.00      0.00      0.00        18\n",
-      "   unrelated       0.43      0.09      0.14        69\n",
+      "          -1       0.93      0.98      0.96       732\n",
+      "           0       0.93      0.89      0.91       744\n",
+      "           1       0.77      0.49      0.60       718\n",
+      "           2       0.92      0.95      0.94       740\n",
+      "           3       0.85      0.81      0.83       675\n",
+      "           4       0.81      0.88      0.85       729\n",
+      "           5       0.89      0.96      0.92       696\n",
+      "           6       0.95      0.99      0.97       709\n",
+      "           7       0.92      0.98      0.95       724\n",
+      "           8       0.87      0.95      0.91       765\n",
       "\n",
-      "    accuracy                           0.58      1398\n",
-      "   macro avg       0.28      0.17      0.18      1398\n",
-      "weighted avg       0.52      0.58      0.50      1398\n",
+      "    accuracy                           0.89      7232\n",
+      "   macro avg       0.89      0.89      0.88      7232\n",
+      "weighted avg       0.89      0.89      0.88      7232\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.575107296137339"
+       "0.8897953539823009"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +368,8 @@
    "source": [
     "# RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=0)\n",
-    "\n",
+    "_y_train = y_train + 1\n",
+    "_y_test = y_test + 1\n",
     "model, report = modelPipeline(X_train, y_train, X_test, y_test, clf, 'out/models/clf.model')\n",
     "report"
    ]
@@ -386,41 +380,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
-      " 'restrictions' 'rumors' 'unrelated']\n",
-      "['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
-      " 'restrictions' 'rumors' 'unrelated']\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Invalid classes inferred from unique values of `y`.  Expected: [0 1 2 3 4 5 6 7 8 9], got ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n 'restrictions' 'rumors' 'unrelated']",
+     "ename": "NameError",
+     "evalue": "name 'XGBClassifier' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39munique(y_train))\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39munique(y_test))\n\u001b[1;32m----> 5\u001b[0m model, report \u001b[39m=\u001b[39m modelPipeline(X_train, y_train, X_test, y_test, xgb, \u001b[39m'\u001b[39;49m\u001b[39mout/models/xgb.model\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m report\n",
-      "File \u001b[1;32md:\\Education\\4th year\\First Semester\\Natural Language Processing\\Project\\NLP-Project\\model.py:26\u001b[0m, in \u001b[0;36mmodelPipeline\u001b[1;34m(X_train, y_train, X_test, y_test, model, model_name)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmodelPipeline\u001b[39m(X_train, y_train, X_test, y_test, model, model_name):\n\u001b[1;32m---> 26\u001b[0m     model \u001b[39m=\u001b[39m trainModel(X_train, y_train, model)\n\u001b[0;32m     27\u001b[0m     y_pred \u001b[39m=\u001b[39m testModel(X_test, model)\n\u001b[0;32m     28\u001b[0m     report \u001b[39m=\u001b[39m evaluateModel(y_test, y_pred)\n",
-      "File \u001b[1;32md:\\Education\\4th year\\First Semester\\Natural Language Processing\\Project\\NLP-Project\\model.py:7\u001b[0m, in \u001b[0;36mtrainModel\u001b[1;34m(X_train, y_train, model)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrainModel\u001b[39m(X_train, y_train, model):\n\u001b[1;32m----> 7\u001b[0m     model\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[0;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m model\n",
-      "File \u001b[1;32mc:\\Users\\mosel\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\xgboost\\core.py:620\u001b[0m, in \u001b[0;36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mfor\u001b[39;00m k, arg \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(sig\u001b[39m.\u001b[39mparameters, args):\n\u001b[0;32m    619\u001b[0m     kwargs[k] \u001b[39m=\u001b[39m arg\n\u001b[1;32m--> 620\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\mosel\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\xgboost\\sklearn.py:1466\u001b[0m, in \u001b[0;36mXGBClassifier.fit\u001b[1;34m(self, X, y, sample_weight, base_margin, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, base_margin_eval_set, feature_weights, callbacks)\u001b[0m\n\u001b[0;32m   1461\u001b[0m     expected_classes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_)\n\u001b[0;32m   1462\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1463\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m.\u001b[39mshape \u001b[39m!=\u001b[39m expected_classes\u001b[39m.\u001b[39mshape\n\u001b[0;32m   1464\u001b[0m     \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_ \u001b[39m==\u001b[39m expected_classes)\u001b[39m.\u001b[39mall()\n\u001b[0;32m   1465\u001b[0m ):\n\u001b[1;32m-> 1466\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1467\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mInvalid classes inferred from unique values of `y`.  \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1468\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExpected: \u001b[39m\u001b[39m{\u001b[39;00mexpected_classes\u001b[39m}\u001b[39;00m\u001b[39m, got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1469\u001b[0m     )\n\u001b[0;32m   1471\u001b[0m params \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_xgb_params()\n\u001b[0;32m   1473\u001b[0m \u001b[39mif\u001b[39;00m callable(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobjective):\n",
-      "\u001b[1;31mValueError\u001b[0m: Invalid classes inferred from unique values of `y`.  Expected: [0 1 2 3 4 5 6 7 8 9], got ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n 'restrictions' 'rumors' 'unrelated']"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_80291/2274880856.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Xgboost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mxgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0m_y_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0m_y_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodelPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'out/models/xgb.model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'XGBClassifier' is not defined"
      ]
     }
    ],
    "source": [
     "# Xgboost\n",
     "xgb = XGBClassifier()\n",
-    "model, report = modelPipeline(X_train, y_train, X_test, y_test, xgb, 'out/models/xgb.model')\n",
+    "_y_train = y_train + 1\n",
+    "_y_test = y_test + 1\n",
+    "model, report = modelPipeline(X_train, _y_train, X_test, _y_test, xgb, 'out/models/xgb.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,30 +411,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      advice       0.00      0.00      0.00        12\n",
-      "   celebrity       0.53      0.14      0.23       194\n",
-      "   info_news       0.53      0.99      0.69       718\n",
-      "      others       0.00      0.00      0.00        43\n",
-      "    personal       0.00      0.00      0.00       208\n",
-      "        plan       0.00      0.00      0.00       113\n",
-      "    requests       0.00      0.00      0.00        21\n",
-      "restrictions       0.00      0.00      0.00         2\n",
-      "      rumors       0.00      0.00      0.00        18\n",
-      "   unrelated       0.00      0.00      0.00        69\n",
+      "          -1       0.00      0.00      0.00        93\n",
+      "           0       0.00      0.00      0.00       208\n",
+      "           1       0.78      1.00      0.88      1097\n",
       "\n",
-      "    accuracy                           0.53      1398\n",
-      "   macro avg       0.11      0.11      0.09      1398\n",
-      "weighted avg       0.34      0.53      0.38      1398\n",
+      "    accuracy                           0.78      1398\n",
+      "   macro avg       0.26      0.33      0.29      1398\n",
+      "weighted avg       0.62      0.78      0.69      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5271816881258942"
+       "0.7846924177396281"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -614,12 +589,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "43b010d9f7d982b0242266748a4ec71b1a1d9ef54f57a230cfc8a9c34419b385"
+    "hash": "e0d277ff71215bc2e00e65dbe1083bb095effc9738a74808cbcc90b6ef0d8026"
    }
   }
  },
