feat: remove-dev-from-feature-model-train-and-handle-unknown-words

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "##  embeddings\n",
-    "w2v_model, bow_model, tfidf_model = get_feature_models(training_data['Lemmatization'].tolist()+dev_data['Lemmatization'].tolist()) # use word2vec to extract the word embeddings\n",
+    "w2v_model, bow_model, tfidf_model = get_feature_models(training_data['Lemmatization'].tolist()) #+dev_data['Lemmatization'].tolist()) # use word2vec to extract the word embeddings\n",
     "training_data['features'] = get_features(w2v_model, bow_model, tfidf_model, training_data['Lemmatization'], 1, 1, 1) # get the word embeddings for each tweet\n",
     "trainingFeatures = training_data['features'].to_numpy()\n",
     "\n",
